--- a/projects.html
+++ b/projects.html
@@ -32,8 +32,8 @@
        
         <div class="logo"><a href="/">preCODES</a></div>
         <ul class="list-unordered">
-            <li><a class=" nav-link links active" href="index.html">home</a></li>
-            <li><a class="nav-link links" href="projects.html">projects</a>
+            <li><a class=" nav-link links" href="index.html">home</a></li>
+            <li><a class="nav-link links active" href="projects.html">projects</a>
             </li>
             <li><a class=" nav-link links" href="blogs.html">blogs</a></li>
         </ul>
@@ -175,161 +175,6 @@
                 </div>
             </section>
         </section>
-
-        <!-- <section class="section off-white blogs">
-            <h2>16. Imagepedia</h2>
-            <p>A website which can search photos & also display them in category. When we hover on the image we can see the photographer name & when clicked, it goes to the pexels website for that image. Also, it can scroll infinitely.
-            </p>
-            <a class="links link-primary" target="_blank" href="https://imagepedia.prerananawar.repl.co/">Let's Visit</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/Beginner-Javascript-Projects/tree/main/infinity-scroll">View
-                    Source Code</a>
-        </section>
-
-        <section class="section projects">
-            <h2>15. Cash Register </h2>
-            <p>A Cash Register App where user can enter a bill amount & cash given by the customer. So, the app helps the user by telling how can he/she return the change to the customer with minimum number of notes?
-            </p>
-            <a class="links link-primary" target="_blank" href="https://cash-register.prerananawar.repl.co/">Try it!</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/build-basics/tree/main/cash-register">View Source
-                    Code</a>
-        </section>
-
-        <section class="section off-white blogs">
-            <h2>14. Is your Birthday Lucky?</h2>
-            <p>This is a website created by HTML,CSS & Javascript which checks whether User's birthday is Lucky?
-            </p>
-            <a class="links link-primary" target="_blank" href="https://lucky-birthday.prerananawar.repl.co/">Let's Play</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/build-basics/tree/main/is-your-birthday-lucky">View
-                Source Code</a>
-        </section>
-
-        <section class="section projects">
-            <h2>13. Quote Genrator App </h2>
-            <p>This is a Quote Genrator App which let's you tweet the quote you like as well as download a image format of the quote.
-            </p>
-            <a class="links link-primary" target="_blank" href="https://quote-generator.prerananawar.repl.co/">Get a Quote</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/Beginner-Javascript-Projects/tree/main/quote-generator">View Source Code</a>
-        </section>
-
-        <section class="section off-white blogs">
-            <h2>12. Destino App!</h2>
-            <p>Do you like travelling to different cities? Here are some of my recommondations that will help you! Made with ReactJS
-            </p>
-            <a class="links link-primary" href="https://1r6ue.csb.app/">Let's Visit</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/neoGcamp-destino-app">View Source Code</a>
-        </section>
-
-        <section class="section projects">
-            <h2>11. Jungle Book </h2>
-            <p>This is a Animals Emoji Interpreter App made with ReactJS.
-            </p>
-            <a class="links link-primary" href="https://89rs0.csb.app/">Let's Play</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/neoGcamp-animals-interpreter">View
-                        Source
-                        Code</a>
-        </section>
-
-
-        <section class="section off-white blogs">
-            <h2>10. Weather App!</h2>
-            <p>This Weather App let's you Search weather by City. It also displays the background image depending on the City.</p>
-            <a class="links link-primary" target="_blank" href="https://searchbycity.netlify.app/">Search Weather by City</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/weather-api-app">View
-                    Source
-                    Code</a>
-        </section>
-
-        <section class="section projects">
-            <h2>9. Groot Translator</h2>
-            <p>Want to talk to Groot? But don't know his Language! Here's the translator that converts English to Groot Language!
-            </p>
-            <a class="links link-primary" target="_blank" href="https://groot-translator.netlify.app/">Let's Play</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/neogCamp-grootTranslator">View
-            Source
-            Code</a>
-        </section>       
-
-        <section class="section off-white blogs">
-            <h2>6. Birth Game</h2>
-            <p>This is Game which checks wheather you were born on a Leap Year & is your Birth date a Prime Number It's a converted version of my two CLI apps.</p>
-            <a class="links link-primary" target="_blank" href="https://neogcamp-excercises-gui.prerananawar.repl.co/">Play Game</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/neogcamp-excersices">View Source Code</a>
-        </section>
-
-        <section class="section projects">
-            <h2>5. Quiz App</h2>
-            <p>In this app I converted my CLI Quiz App to GUI.</p>
-            <a class="links link-primary" target="_blank" href="https://quiz-app-gui.prerananawar.repl.co/">Let's Play</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/quiz-app-gui">View Source Code</a>
-        </section> -->
-
-        <!-- <section class="section off-white blogs">
-            <h2>4. Is you Birth day a Prime Number?</h2>
-            <p>Here's a CLI app check whether your Birth date a Prime Number.</p>
-            <a class="links link-primary" target="_blank" href="https://repl.it/@PreranaNawar/neoGcamp-exercise2?embed=1output=1#index.js">Play Game</a><br>
-            <a class="links link-secondary" target="_blank" href="https://repl.it/@PreranaNawar/neoGcamp-exercise2#index.js">View Source Code</a>
-        </section>
-
-        <section class="section projects">
-            <h2>3. Were you Born on a Leap Year ?</h2>
-            <p>This CLI app check whether you were born on a leap Year.</p>
-            <a class="links link-primary" target="_blank" href="https://repl.it/@PreranaNawar/neoGcamp-exercise1?embed=1output=1#index.js">Let's Play</a><br>
-            <a class="links link-secondary" target="_blank" href="https://repl.it/@PreranaNawar/neoGcamp-exercise1#index.js">View Source Code</a>
-        </section>
-
-
-        <section class="section off-white blogs">
-            <h2>2. How well do you know India?</h2>
-            <p>Another nodeJS CLI app. You can send this to your friends and find out who really knows India well?</p>
-            <a class="links link-primary" target="_blank" href="https://repl.it/@PreranaNawar/neoGcamp-week1Project?embed=1output=1#index.js">Play Game</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/neoGcamp-week1-Project">View Source Code</a>
-        </section>
-
-        <section class="section projects">
-            <h2>1. How well do you know Prerana?</h2>
-            <p>It is a CLI app built with nodeJS. Built as an assignment in the neoG.camp. This checks whether you know me.
-            </p>
-            <a class="links link-primary" target="_blank" href="https://repl.it/@PreranaNawar/neogcamp-lesson1?embed=1output=1#index.js">Play Game</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/neoGcamp-lesson1">View
-                Source Code</a>
-        </section> -->
-
-         <!-- 
-        <section class="section off-white blogs">
-            <h2>8. Banana Translator</h2>
-            <p>Want to talk to Minions? But don't know what gibberish they speak! Here's the translator that converts English to Minions Language!
-            </p>
-            <a class="links link-primary" target="_blank" href="https://neogcamp-bananaspeak.prerananawar.repl.co/">Let's Play</a><br>
-            <a class="links link-secondary" target="_blank" href="https://github.com/prerana1821/neoGcamp-banana-translation">View
-                Source
-                Code</a>
-        </section>
-
-        <section class="section projects">
-            <h2>7. Age Calculator!</h2>
-            <p>This App Calculates your age in years, months and days. Also, Let's you change the heading color randomly.</p>
-            <a class="links link-primary" target="_blank" href="https://agecalculator.prerananawar.repl.co/">Calculate</a><br>
-            <a class="links link-secondary" target="_blank" href="https://repl.it/@PreranaNawar/AgeCalculator">View
-                Source
-                Code</a>
-        </section> -->
-
-        <!-- <section class="section off-white blogs">
-            <h2>6. Binary to Decimal Converter</h2>
-            <p>It's a Binary to Decimal app made with HTML/CSS and Javascript.</p>
-            <a class="links link-primary" target="_blank" href="https://bin2dec.prerananawar.repl.co/">Convert it!</a><br>
-            <a class="links link-secondary" target="_blank" href="https://repl.it/@PreranaNawar/Bin2Dec#index.html">View Source Code</a>
-        </section>
-
-
-        <section class="section projects">
-            <h2>5. Calculate It!</h2>
-            <p>This is a Simple Calculator app made with HTML/CSS and Javascript.</p>
-            <a class="links link-primary" target="_blank" href="https://calculator.prerananawar.repl.co/">Let's
-                Calculate</a><br>
-            <a class="links link-secondary" target="_blank" href="https://repl.it/@PreranaNawar/Calculator#index.html">View Source
-                Code</a>
-        </section> -->
 
     </main>
 
