--- a/blogs.html
+++ b/blogs.html
@@ -28,13 +28,12 @@
 <body>
 
     <header id="header">
-       
         <div class="logo"><a href="/">preCODES</a></div>
         <ul class="list-unordered">
-            <li><a class=" nav-link links active" href="index.html">home</a></li>
+            <li><a class=" nav-link links" href="index.html">home</a></li>
             <li><a class="nav-link links" href="projects.html">projects</a>
             </li>
-            <li><a class=" nav-link links" href="blogs.html">blogs</a></li>
+            <li><a class=" nav-link links active" href="blogs.html">blogs</a></li>
         </ul>
         <div class="toggle" onclick="toggle()"></div>
     </header>
@@ -149,69 +148,6 @@
             </div>
             
         </section>
-
-        <!-- <section class="section off-white blogs">
-            <h2>1. Git for Beginners</h2>
-            <p>If you are a <strong>Beginner</strong> and you don't know what's <strong>Git</strong>. Here's an awesome article to help you out!!</p>
-            <a class="links link-primary" href="/git-for-beginners.html">Let's Read it!</a>
-        </section>
-
-        <section class="section projects">
-            <h2>2. What is Dart ?</h2>
-            <p>Here, is a small article on <strong>Dart</strong> and some of its interesting features!</p>
-            <a class="links link-primary" href="/what-is-dart.html">Let's Read it!</a>
-        </section>
-
-        <section class="section off-white blogs">
-            <h2>3. Core Concepts of Programming through JavaScript</h2>
-            <p>If you are an beginner here's an blog to help you understand some of the Core Concepts of Programming, and If you are not a Beginner let's refresh your Memory.</p>
-            <a class="links link-primary" target="_blank" href="https://dev.to/prerana1821/core-concepts-of-programming-through-javascript-3dmi">Let's Read
-                it!</a>
-        </section>
-
-        <section class="section projects">
-            <h2>4. How to make a CLI Quiz App using JavaScript for Beginner</h2>
-            <p>Here's an article that will help a beginner on <strong>how to make CLI app in JavaScript</strong>.</p>
-            <a class="links link-primary" target="_blank" href="https://dev.to/prerana1821/how-to-make-a-cli-quiz-app-using-javascript-for-beginners-cij">Let's
-                Read it!</a>
-        </section>
-
-        <section class="section off-white blogs">
-            <h2>5. Reviewing Eloquent Javascript #IntroChpt</h2>
-            <p>In this blog, I have wrote my learnings from the <strong>Eloquent Javascript Book's Introduction Chapter</strong>.</p>
-            <a class="links link-primary" target="_blank" href="https://dev.to/prerana1821/reviewing-eloquent-javascript-introchpt-5ej7">Let's Read it!</a>
-        </section>
-
-        <section class="section projects">
-            <h2>6. Reviewing Eloquent Javascript #Chpt1</h2>
-            <p>In this blog, I have wrote my learnings from the <strong>Eloquent Javascript Book's Chapter 1</strong>.</p>
-            <a class="links link-primary" target="_blank" href="https://dev.to/prerana1821/reviewing-eloquent-javascript-chpt1-47mj">Let's Read it!</a>
-        </section>
-
-        <section class="section off-white blogs">
-            <h2>7. Reviewing Eloquent Javascript #Chpt2</h2>
-            <p>In this blog, I have wrote my learnings from the <strong>Eloquent Javascript Book's Chapter 2</strong>.</p>
-            <a class="links link-primary" target="_blank" href="https://dev.to/prerana1821/reviewing-eloquent-javascript-chpt2-3o8l">Let's Read it!</a>
-        </section>
-
-        <section class="section projects">
-            <h2>8. Reviewing Eloquent Javascript #Chpt3</h2>
-            <p>In this blog, I have wrote my learnings from the <strong>Eloquent Javascript Book's Chapter 3</strong>.</p>
-            <a class="links link-primary" target="_blank" href="https://dev.to/prerana1821/reviewing-eloquent-javascript-chpt3-1mea">Let's Read it!</a>
-        </section>
-
-        <section class="section off-white blogs">
-            <h2>9. Reviewing Eloquent Javascript #Chpt4</h2>
-            <p>In this blog, I have wrote my learnings from the <strong>Eloquent Javascript Book's Chapter 4</strong>.</p>
-            <a class="links link-primary" target="_blank" href="https://dev.to/prerana1821/reviewing-eloquent-javascript-chpt4-20e0">Let's Read it!</a>
-        </section>
-
-        <section class="section projects">
-            <h2>10. Reviewing Eloquent Javascript #Chpt5</h2>
-            <p>In this blog, I have wrote my learnings from the <strong>Eloquent Javascript Book's Chapter 5</strong>.</p>
-            <a class="links link-primary" target="_blank" href="https://dev.to/prerana1821/reviewing-eloquent-javascript-chpt5-1egh">Let's Read it!</a>
-        </section>
- -->
 
     </main>
 
