made blogs responsive

--- a/git-for-beginners.html
+++ b/git-for-beginners.html
@@ -40,12 +40,12 @@
 
     <main>
 
-        <header>
-            <h1 class="blog-heading">Git for Beginners</h1>
-        </header>
+        <div>
+            <h2 class="blog-heading">Git for Beginners</h2>
+        </div>
 
         <div>
-            <img class="projects-img-git" src="/images/git.jpg" alt="Git">
+            <img class="projects-img-git" src="/images/blogs/git.jpg" alt="Git">
         </div>
 
         <section class="blog">
