--- a/what-is-dart.html
+++ b/what-is-dart.html
@@ -40,25 +40,25 @@
 
     <main>
 
-        <header>
+        <div>
             <h1 class="blog-heading">What is Dart ?</h1>
-        </header>
+        </div>
 
         <div>
-            <img class="projects-img-dart" src="/images/dart.jpg" alt="Dart">
+            <img class="projects-img-dart" src="/images/blogs/dart.jpg" alt="Dart">
         </div>
 
         <section class="blog">
-            <h1>
+            <h2>
                 Hello Geeks, In this article, we'll try to understand, What is Dart? and some interesting Features/Facts of Dart.
-            </h1>
+            </h2>
 
             <br>
 
 
             <h2>What is Dart ?</h2>
             <p>The Google's definition for dart says that:</p>
-            <img src="/images/dart-google.png" class="blog2-img-2" alt="Google's definition for Dart">
+            <img src="/images/blogs/dart-google.png" class="blog2-img-2" alt="Google's definition for Dart">
             <p>So, We will divide the line into 3 parts:</p>
 
 
