--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
             <div class="model-1">
                 <img src="images/hero.svg" alt="home-banner">
             </div>
-
-            <!-- <input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</label> -->
-
-
         </div>
 
         <section class="about-me">
@@ -293,8 +289,8 @@
         <p>© | 2021 | preCODES | Made with 🤍 & <span>&lt;/&gt;</span></p>
     </footer>
     
-    <script src="script.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/scripts/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
 </body>
