refactor: Added changes

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             </div>
         </div>
 
-        <section class="about-me">
-            <div class="model-2">
+        <!-- <section class="about-me"> -->
+            <!-- <div class="model-2">
                 <img src="images/skills.svg" alt="home-banner">
             </div>
             <div class="about-me-text">
@@ -85,9 +85,9 @@
                     <li>Web Hosting: Netlify</li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
-        <section  class="section off-white blogs">
+        <!-- <section  class="section off-white blogs">
             <h2>My Projects</h2>
             <p>I like to showcase my work and thus, here are some of my projects.</p>
             <a class="links link-primary" href="projects.html">Browse Projects</a>
@@ -237,7 +237,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="section off-white blogs blog">
             <h2>My Blogs</h2>
