--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
             <a class="links link-secondary" href="blogs.html">Read Blogs</a>
         </section>
 
+        <section class="section off-white blogs blog">
+            <h2>My Projects</h2>
+            <p>I would like to showcase my work!</p>
+            <a class="links link-secondary" href="projects.html">Read Blogs</a>
+        </section>
+
         <section class="section off-white blogs">
              <h2>Get in touch!</h2>
             
