Added project section

--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
         </section> -->
 
         <section class="section off-white blogs blog">
-            <h2>My Blogs</h2>
-            <p>You can checkout my blogs!!</p>
-            <a class="links link-secondary" href="blogs.html">Read Blogs</a>
+            <h2>My Projects</h2>
+            <p>I would like to showcase my work!</p>
+            <a class="links link-primary" href="projects.html">See Projects</a>
         </section>
 
         <section class="section off-white blogs blog">
-            <h2>My Projects</h2>
-            <p>I would like to showcase my work!</p>
-            <a class="links link-secondary" href="projects.html">Read Blogs</a>
+            <h2>My Blogs</h2>
+            <p>You can checkout my blogs!!</p>
+            <a class="links link-secondary" href="blogs.html">Read Blogs</a>
         </section>
 
         <section class="section off-white blogs">
