--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <section class="section off-white blogs blog">
             <h2>My Projects</h2>
             <p>I would like to showcase my work!</p>
-            <a class="links link-primary" href="projects.html">See Projects</a>
+            <a class="links link-primary" style="color:white" href="projects.html">See Projects</a>
         </section>
 
         <section class="section off-white blogs blog">
