feat: added forms

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <a class="links link-secondary" href="blogs.html">Read Blogs</a>
       </section>
 
-      <!-- <section class="section off-white blogs">
+      <section class="section off-white blogs">
              <h2>Get in touch!</h2>
             
              <form class="contactme" action="">
@@ -285,7 +285,7 @@
                 </div>
                  <a class="links link-primary" href="">Submit</a>
              </form>
-        </section> -->
+        </section>
     </main>
 
     <footer class="footer">
