feat: added certificates & projects

--- a/blogs.html
+++ b/blogs.html
@@ -234,6 +234,25 @@
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="column">
+            <img src="./images/blogs/typescript.jpg" alt="" />
+            <div>
+              <h2>Intro to Typescript for Javascript devs</h2>
+              <p>
+                In this blog, I have wrote how to get started with typescript
+                <strong>as a Javascript developer</strong>.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://precodes.hashnode.dev/intro-to-typescript-for-javascript-devs"
+                >Let's Read it!</a
+              >
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
