--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         </div>
       </div>
 
-      <!-- <section class="about-me"> -->
-      <!-- <div class="model-2">
+      <section class="about-me">
+      <div class="model-2">
                 <img src="images/skills.svg" alt="home-banner">
             </div>
             <div class="about-me-text">
@@ -93,19 +93,25 @@
                 <h3>My Skills:</h3>
                 <ul>
                     <li>Mobile : Flutter</li>
-                    <li>Web: HTML5, CSS3, Javascript, NodeJS, Python, Flask</li>
-                    <li>Database: MySQL, Firebase</li>
+                    <li>Frontend Web: HTML5, CSS3, Javascript, React, NodeJS, Typescript, Jest, Redux, NextJS</li> 
+                    <li>Backend Web: Express, Mongoose, MySQL, MongoDB, Firebase</li>
                     <li>VCS: Git, Github</li>
-                    <li>Web Hosting: Netlify</li>
+                    <li>Web Hosting: Netlify, Vercel, Heroku</li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
-      <!-- <section  class="section off-white blogs">
+       <section  class="section off-white blogs">
             <h2>My Projects</h2>
             <p>I like to showcase my work and thus, here are some of my projects.</p>
             <a class="links link-primary" href="projects.html">Browse Projects</a>
         </section>
+
+      <section class="section off-white blogs">
+        <h2>My Blogs</h2>
+        <p>You can checkout my blogs!!</p>
+        <a class="links link-secondary" href="blogs.html">Read Blogs</a>
+      </section>
 
         <section  class="section career">
         <div>
@@ -181,7 +187,7 @@
                 </div>
             </div>
         </div>
-        </section>
+        </section> 
 
         
 
@@ -192,6 +198,16 @@
 
         <section class="section projects">
             <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "imagesLoaded": true}'>
+                <div class="carousel-cell">
+                    <div class="card carousel-card">
+                        <div class="certimage"><img src="images/cert/IncubateInd-hack.png"></img></div>
+                        <div class="certdetails">
+                            <h2>2nd price in Code Innovation Series Hackathon</h2>
+                            <p>In this hackathon, we created a e-learning application for student developers named edukit where they can learn different courses, users can complete a
+                course, play quizzes, get certificate on course completion,
+                bookmark, & create their own playlist of courses.</p></div>
+                    </div>
+                </div>
                 <div class="carousel-cell">
                     <div class="card carousel-card">
                         <div class="certimage"><img src="images/cert/responsive.png"></img></div>
@@ -253,7 +269,7 @@
             </div>
         </section> -->
 
-      <section class="section off-white blogs blog">
+      <!-- <section class="section off-white blogs blog">
         <h2>My Projects</h2>
         <p>I would like to showcase my work!</p>
         <a class="links link-primary" style="color: white" href="projects.html"
@@ -265,7 +281,7 @@
         <h2>My Blogs</h2>
         <p>You can checkout my blogs!!</p>
         <a class="links link-secondary" href="blogs.html">Read Blogs</a>
-      </section>
+      </section> -->
 
       <section class="section off-white blogs">
              <h2>Get in touch!</h2>
