--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,84 @@
 
       <section>
         <section class="project-overlap">
+          <div class="left left-componentlibrary"></div>
+          <div class="right">
+            <div class="content">
+              <h2>preKit</h2>
+              <p>
+                My own CSS Library. <strong>preKit</strong> is a free, open
+                source library that provides ready-to-use frontend components
+                that you can easily combine to build responsive web interfaces.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://prekit.netlify.app/"
+                >Visit</a
+              >
+              <a
+                class="links link-secondary"
+                target="_blank"
+                href="https://github.com/prerana1821/prekit"
+                >Source Code</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="project-overlap">
+          <div class="left left-prestore"></div>
+          <div class="right">
+            <div class="content">
+              <h2>preStore</h2>
+              <p>
+                E-commerce website with live filters, search, complete JWT based
+                authentication, cart, wishlist, address management made using
+                MERN Stack.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://prestore.netlify.app"
+                >Visit</a
+              >
+              <a
+                class="links link-secondary"
+                target="_blank"
+                href="https://github.com/prerana1821/eCommerce"
+                >Source Code</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="project-overlap">
+          <div class="left left-quizTS"></div>
+          <div class="right">
+            <div class="content">
+              <h2>Quizzel</h2>
+              <p>
+                A Quiz website made using typescript, react, tailwindCSS,
+                testing using JEST with authentication, user activity support &
+                quiz dashboard.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://quizzel.netlify.app/"
+                >Visit</a
+              >
+              <a
+                class="links link-secondary"
+                target="_blank"
+                href="https://github.com/prerana1821/quiz-app"
+                >Source Code</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="project-overlap">
           <div class="left left-imagepedia"></div>
           <div class="right">
             <div class="content">
@@ -79,6 +157,32 @@
                 class="links link-secondary"
                 target="_blank"
                 href="https://github.com/prerana1821/Beginner-Javascript-Projects/tree/main/infinity-scroll"
+                >Source Code</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="project-overlap">
+          <div class="left left-pretube"></div>
+          <div class="right">
+            <div class="content">
+              <h2>preTube</h2>
+              <p>
+                A Youtube Clone with live filters, search, personal notes,
+                markdown support, complete JWT based authentication, playlist,
+                watchlater, like-dislike, history management made MERN Stack
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://pretube.netlify.app/"
+                >Visit</a
+              >
+              <a
+                class="links link-secondary"
+                target="_blank"
+                href="https://github.com/prerana1821/video-library"
                 >Source Code</a
               >
             </div>
@@ -135,6 +239,34 @@
                 href="https://github.com/prerana1821/build-basics/tree/main/is-your-birthday-lucky"
               >
                 Source Code</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="project-overlap">
+          <div class="left left-edukit"></div>
+          <div class="right">
+            <div class="content">
+              <h2>eduKit</h2>
+              <p>
+                Edukit is a e-learning platform where users can complete a
+                course, play quizzes, get certificate on course completion,
+                bookmark, & create their own playlist of courses. Also, this
+                project has got second prize in Code Innovation hackathon
+                conducted by Github & Incubateind.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://edukit.netlify.app/"
+                >Visit</a
+              >
+              <a
+                class="links link-secondary"
+                target="_blank"
+                href="https://github.com/prerana1821/edukit"
+                >Source Code</a
               >
             </div>
           </div>
