feat: added google form

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section> 
 
       <!-- <section class="section off-white blogs blog">
         <h2>My Projects</h2>
@@ -285,21 +285,20 @@
 
       <section class="section off-white blogs">
              <h2>Get in touch!</h2>
-            
-             <form class="contactme" action="">
+                     <form class="contactme" action='https://docs.google.com/forms/u/0/d/e/1FAIpQLSf5z2q1qsT297N6kov4ttMrSmpE9_AnBYzl3ylb1bjHtLdWvw/formResponse'>
                  <div>
-                    <input type="text" class="inputText" required/>
+                    <input type="text" class="inputText" required name="entry.1056619307"/>
                     <span class="floating-label">Your Name</span>
                 </div>
                 <div>
-                    <input type="text" class="inputText" required/>
+                    <input type="text" class="inputText" required name="entry.275977341"/>
                     <span class="floating-label">Your Email Address</span>
                 </div>
                 <div>
-                    <input  class="inputText message" required></input>
+                    <input  class="inputText message" required name="entry.275977341"></input>
                     <span class="floating-label">Your Message</span>
                 </div>
-                 <a class="links link-primary" href="">Submit</a>
+                   <input class="links link-primary" type="submit" value="Submit">
              </form>
         </section>
     </main>
@@ -307,7 +306,6 @@
     <footer class="footer">
       <h3>Say Hi to me!👋</h3>
       <ul class="list-unordered footer-list">
-        <!-- <li><a class="links" href="/"><i class='bx bx-mail-send'></i></a> </li> -->
         <li>
           <a class="links" href="mailto: prerananw1@gmail.com"
             ><i class="far fa-envelope"></i
